# model.cvp.run

./: .gitignore  LICENSE  README.md  black.sh  flake8.sh  isort.cfg  isort.sh  main.py  mypy.sh  pyproject.toml  pytest.ini  pytest.sh  run
.claude/: settings.json
.github/workflows/: python-deploy.yml  python-test.yml
src/cvpm/: __main__.py  arguments.py  entrypoint.py  variables.py
src/cvpm/apps/: __init__.py
src/cvpm/apps/agent/: __init__.py  app.py  ws_client.py
src/cvpm/apps/weld_inspector_ptv3/: __init__.py  app.py
src/cvpm/colors/: xterm.py
src/cvpm/colors/convert/: imgui.py
src/cvpm/logging/: disable.py  loggers.py  logging.py  mpv.py  names.py  styles.py  variables.py
src/cvpm/logging/handlers/: callable.py
src/cvpm/logging/records/: formatted.py
src/cvpm/palette/: __init__.py  basic.py  vga.py
src/cvpm/system/: conf.py  environ.py  environ_keys.py  shell.py
src/cvpm/system/shortcut/: xdg.py
src/cvpm/types/: annotations.py  form.py  shapes_i.py
src/cvpm/types/dataclass/: field_default.py  field_name.py  public_copy.py
src/cvpm/types/enum/: str_enum.py
src/cvpm/types/matcher/: base.py  interface.py  mapper.py
tester/: test_entrypoint.py
