[project]
name = "cvpm"
dynamic = ["version"]
description = "model.cvp.run"
readme = "README.md"
license = "MIT"
authors = [
    { name = "zer0", email = "osom8979@gmail.com" },
]
maintainers = [
    { name = "zer0", email = "osom8979@gmail.com" },
]
requires-python = ">=3.14"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities",
]
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.3",
    "pyyaml>=6.0.3",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort[colors]",
    "lark",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/cvprun/model.cvp.run"
"GitHub: issues" = "https://github.com/cvprun/model.cvp.run/issues"
"GitHub: repo" = "https://github.com/cvprun/model.cvp.run"

[project.scripts]
cvpm = "cvpm.main:main"

[tool.hatch.version]
path = "src/cvpm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cvpm"]

[tool.hatch.build]
exclude = [
    "tester*",
    "src/cvpm/assets/.gitignore",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
